:+1: #1 pip installをentrypoint.shで行うように変更した

--- a/container/fastAPI/Dockerfile
+++ b/container/fastAPI/Dockerfile
@@ -13,9 +13,12 @@ RUN apt-get update && \
     apt-get clean all && \
     rm -rf /var/cache/apt
 
-# fastApiのインストール
-RUN pip install fastapi && \
-    pip install uvicorn[standard]
-
 # 作業ディレクトリを設定
 WORKDIR ${SOURCE_DIR}
+
+# 起動時に実施する処理を定義したntrypoint.shをコピーして実行
+COPY container/fastAPI/entrypoint.sh /usr/bin/
+# 実行権限を付与
+RUN chmod +x /usr/bin/entrypoint.sh
+# エントリーポイントの処理を実行
+ENTRYPOINT [ "entrypoint.sh" ]
