:+1: #4 poetryを利用した開発環境に切り替え

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,12 @@ services:
       - .:/fastApi
       # pip install先をマウントして、インストール時間の短縮を図る
       - ${PIP_CACHE_DIR:-pip}:/usr/local/lib/python3.10/site-packages
-    command: ['uvicorn', 'main:app', '--host', '0.0.0.0', '--reload']
+      # .venv先をマウントして、インストール時間の短縮を図る
+      - ${VENV_CACHE_DIR:-venv}:/fastApi/.venv
+    command: ['poetry', 'run', 'uvicorn', 'main:app', '--host', '0.0.0.0', '--reload']
 
 volumes:
   # pipパッケージをキャッシュするボリューム
   pip:
+  # poetryのvenvをキャッシュするボリューム
+  venv:
