ディレクトリ構成を変更した

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - ${PIP_CACHE_DIR:-pip}:/usr/local/lib/python3.10/site-packages
       # .venv先をマウントして、インストール時間の短縮を図る
       - ${VENV_CACHE_DIR:-venv}:/fastApi/.venv
-    command: ['poetry', 'run', 'uvicorn', 'main:app', '--host', '0.0.0.0', '--reload']
+    command: ['poetry', 'run', 'uvicorn', 'api.main:app', '--host', '0.0.0.0', '--reload']
 
 volumes:
   # pipパッケージをキャッシュするボリューム
