--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,27 @@ services:
       - ${VENV_CACHE_DIR:-venv}:/fastApi/.venv
     command: ['poetry', 'run', 'uvicorn', 'api.main:app', '--host', '0.0.0.0', '--reload']
 
+  db:
+    image: mysql:8.0
+    # M1Macでも動作するようにplatformにarmを利用しないようにする
+    platform: linux/x86_64
+    environment:
+      # rootアカウントをパスワード無しで作成
+      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+      # demoというDBを初期DBとして作成
+      MYSQL_DATABASE: 'demo'
+      # TimeZoneを日本時間に設定
+      TZ: 'Asia/Tokyo'
+    volumes:
+      - db_data:/var/lib/mysql
+    ports:
+      # localhost の 3306 ポートでアクセスできるようにする
+      - '3306:3306'
+    # デフォルトの認証がsha2でパスワード認証が出来ないため、パスワード認証を行う設定に変更
+    command: --default-authentication-plugin=mysql_native_password
+
 volumes:
   # poetryのvenvをキャッシュするボリューム
   venv:
+  # mysqlのデータ永続化ボリューム
+  db_data:
