--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - .:/fastapi
       # .venv先をマウントして、インストール時間の短縮を図る
       - ${VENV_CACHE_DIR:-venv}:/fastapi/.venv
+    command: ['poetry', 'run', 'uvicorn', 'api.main:app', '--host', '0.0.0.0', '--reload']
     depends_on:
       - db
 
